--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 	<classpathentry kind="lib" path="G:/workspace/GrammaticalWords.jar" sourcepath="/GrammaticalWords"/>
 	<classpathentry kind="lib" path="G:/workspace/NGram.jar" sourcepath="/NGram"/>
 	<classpathentry kind="lib" path="G:/workspace/PPM.jar" sourcepath="/PPM"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
